Fix issue with background not being aligned to top

--- a/app/assets/scss/components/_page.scss
+++ b/app/assets/scss/components/_page.scss
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
+    top: 0;
 }
 
 .page-overlay {
